--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "financial_education",
+  "name": "finnexus",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
